@@ -1,0 +1,20 @@
+#define PQXX_HAVE_LO_TELL 1
+#define PQXX_HAVE_PQCLIENTENCODING 1
+#define PQXX_HAVE_PQDESCRIBEPORTAL 1
+#define PQXX_HAVE_PQENCRYPTPASSWORD 1
+#define PQXX_HAVE_PQESCAPEBYTEA 1
+#define PQXX_HAVE_PQESCAPEBYTEACONN 1
+#define PQXX_HAVE_PQESCAPESTRING 1
+#define PQXX_HAVE_PQESCAPESTRINGCONN 1
+#define PQXX_HAVE_PQEXECPREPARED 1
+#define PQXX_HAVE_PQFREEMEM 1
+#define PQXX_HAVE_PQFREENOTIFY 1
+#define PQXX_HAVE_PQFTABLE 1
+#define PQXX_HAVE_PQFTABLECOL 1
+#define PQXX_HAVE_PQMBLEN 1
+#define PQXX_HAVE_PQPREPARE 1
+#define PQXX_HAVE_PQPROTOCOLVERSION 1
+#define PQXX_HAVE_PQPUTCOPY 1
+#define PQXX_HAVE_PQRESULTERRORFIELD 1
+#define PQXX_HAVE_PQSERVERVERSION 1
+#define PQXX_HAVE_PQUNESCAPEBYTEA 1
